--- a/src/Components/LeftSide/LeftSide.css
+++ b/src/Components/LeftSide/LeftSide.css
@@ -1,14 +1,24 @@
 .left-side {
     width: 100%;
-    background-color: #864241;
+    /*background-color: #864241;
+    */background-color: rgba(0,0,0,0.7);
+    box-shadow: 1px 1px 15px 0px yellow inset;
     text-align: center;
-    padding: 40px 20px;
+    padding: 40px 20px 25px 20px;
     margin-bottom: 25px;
     border-radius: 15px;
     -webkit-border-radius: 15px;
     -moz-border-radius: 15px;
     -ms-border-radius: 15px;
     -o-border-radius: 15px;
+    transition: box-shadow 0.5s;
+    -webkit-transition: box-shadow 0.5s;
+    -moz-transition: box-shadow 0.5s;
+    -ms-transition: box-shadow 0.5s;
+    -o-transition: box-shadow 0.5s;
+}
+.left-side:hover {
+    box-shadow: 1px 1px 15px 0px #3A9DF9 inset;
 }
 .left-side > img {
     width: 200px;
