--- a/src/Components/RightSide/RightSide.css
+++ b/src/Components/RightSide/RightSide.css
@@ -1,5 +1,7 @@
 .right-side {
-    background-color: #864241;
+    /*background-color: #864241;
+    */background-color: rgba(0,0,0,0.7);
+    box-shadow: 1px 1px 15px 0px yellow inset;
     width: 100%;
     height: auto;
     padding: 40px 40px 25px 40px;
@@ -8,6 +10,14 @@
     -moz-border-radius: 15px;
     -ms-border-radius: 15px;
     -o-border-radius: 15px;
+    transition: box-shadow 0.5s;
+    -webkit-transition: box-shadow 0.5s;
+    -moz-transition: box-shadow 0.5s;
+    -ms-transition: box-shadow 0.5s;
+    -o-transition: box-shadow 0.5s;
+}
+.right-side:hover {
+    box-shadow: 1px 1px 15px 0px #3A9DF9 inset;
 }
 @media screen and (max-width:991px) {
     .right-side {
